networking/kiali_ingressgateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress  
  servers:
    - port:
        number: 80          
        name: http
        protocol: HTTP
      hosts:
        - "kiali.foo.org"   
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-ingress
spec:
  hosts:
    - "kiali.foo.org"       
  gateways:
    - kiali-gateway         
  http:
    - match:
        - uri:
            prefix: /       
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local     
            port:
              number: 20001
